<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2196F3"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/RegOption"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnRegByUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/RegByUserName" />

    <Button
        android:id="@+id/btnRegByMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/RegByMobile" />
</LinearLayout>