<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bgcolor"
    tools:context=".MainActivity">

    <LinearLayout
        android:background="@drawable/et_main"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:padding="20dp"
        android:layout_height="wrap_content">

        <TextView
            android:textStyle="bold"
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:text="@string/LbILogin"
            android:textColor="@color/white"
            android:textSize="34sp" />

        <EditText
            android:id="@+id/txtUserName"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:ems="10"
            android:textColor="@color/white"
            android:hint="@string/LbIUserName"
            android:textColorHint="@color/white"
            android:background="@drawable/et_main"
            android:paddingLeft="30dp"
            android:inputType="text" />

        <EditText
            android:textColor="@color/white"
            android:layout_marginTop="30dp"
            android:background="@drawable/et_main"
            android:textColorHint="@color/white"
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:ems="10"
            android:hint="@string/LbIPassword"
            android:paddingLeft="30dp"
            android:inputType="textPassword" />

        <RadioGroup
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbtnLoginByUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:textColor="@color/white"
                android:button="@drawable/rb_main"
                android:paddingLeft="10dp"
                android:text="@string/LbILoginByUserName" />

            <RadioButton
                android:textColor="@color/white"
                android:id="@+id/rbtnLoginByEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@drawable/rb_main"
                android:paddingLeft="10dp"
                android:text="@string/LbILoginByEmail" />
        </RadioGroup>

        <CheckBox
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/cbRememberMe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:paddingStart="10dp"
            android:button="@drawable/cb_main"
            android:text="@string/LbIRememberMe" />

        <Button
            android:layout_marginTop="50dp"
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/LbIBtnLogin"
            android:textColor="@color/bgcolor"
            android:background="@drawable/btn_main"
            />

        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/btnReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Reg"
            android:textColor="@color/bgcolor"
            android:background="@drawable/btn_main"
            />

        <TextView
            android:id="@+id/txtResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#F44336" />
    </LinearLayout>
</LinearLayout>