<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="500dp">
        <TextView
            android:layout_margin="10dp"
            android:id="@+id/txtLicense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:ems="10"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:text="@string/TxtUserLicense" />
    </ScrollView>
    <CheckBox
        android:id="@+id/cbConfirmLicense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:button="@drawable/cb_custom"
        android:layout_margin="10dp"
        android:paddingLeft="10dp"
        android:text="@string/CbLicense" />

    <Button
        android:layout_margin="5dp"
        android:id="@+id/btnConfirmLicense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/BtnConfirm"
        android:background="@drawable/btn_custom"
        />
</LinearLayout>